--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <h1>HOLA MUNDO GIT</h1>
-    <h2>Hola mundo bootstrap</h2>
     <h5>Rama Pruba</h5>
-     <h1>Adriana</h1>
+    <h1>GIIHUB</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, sapiente nulla quisquam perferendis ex dolores quidem, adipisci tempora recusandae nobis sequi provident sint aut harum libero soluta esse natus ab!</p>
+    
 </body>
-</html>
+</html> 
